--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	font-family: 'Bruno Ace SC', 'Bruno Ace', cursive;
 }
 ol, ul {
 	list-style: none;
@@ -41,3 +42,5 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
